--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#" class="button-design">Order Food</a>
         </div>
         <div class="top-child">
-            <img src="images/female/top-img.png" alt="a girl with food">
+            <img src="images/female/top-img1.png" alt="a girl with food">
         </div>
     </div>
 
