demo text removed

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!--<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">-->
-
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Food Park</title>
@@ -18,15 +16,17 @@
 <body>
     <div class="top-section flexible">
         <div class="top-child">
-            <h1> <span class="highlight-text">Skip</span> The Diet, <br> Just Eat Healthy <br> With Food Network </h1>
+            <h1> <span class="highlight-text">Skip</span> The Diet, <br> Just Eat Healthy <br> With <span
+                    class="highlight-text">Food Park </span> </h1>
             <p>
                 Imagine you don't need a diet because we provide
                 healthy and delicious food for you!
             </p>
-            <a href="#" class="button-design">Order Food</a>
+            <a href="https://www.facebook.com/shakhawathossain.shihab/" target="_blank" class="button-design">Order
+                Food</a>
         </div>
         <div class="top-child">
-            <img src="images/female/top-img1.png" alt="a girl with food">
+            <img src="images/female/top-img1s.png" alt="a girl with food">
         </div>
     </div>
 
@@ -35,53 +35,54 @@
             <img src="images/female/person-image.png" alt="Me">
         </div>
         <div class="about-child">
-            <h2>About Me</h2>
+            <h2>About Us</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum diam orci pretium a pharetra,
-                feugiat cursus. Dictumst risus, sem egestas odio cras adipiscing vulputate. Nisi, risus in suscipit non.
-                Non commodo volutpat, pharetra, vel.
+                We assure the best food as well as teasty food. When people think about outside food they become afraid.
+                The anexity is because of there previous ecperience of eating outside food was not good. But we are here
+                to resolve your anexity. We are providing our service in the country for about 14 years. So order our
+                food and enjoy. We can assure that you will order again.
             </p>
-            <a href="#" class="button-design">Contact Me</a>
+            <a href="https://www.facebook.com/shakhawathossain.shihab/" target="_blank" class="button-design">Contact
+                Us</a>
         </div>
     </div>
 
     <div class="recipie-section">
 
         <div class="recipie-text">
-            <h2>My recipies</h2>
+            <h2>Our recipies</h2>
             <p>
-                Lorem Ipsum is simply dummy text of th e printin g an d typesettin g in dustry. Lorem Ipsum has been th
-                e in
-                dustry's stan dard dummy text ever sin ce th e 1500s.
+                Our recicpies includes all the authentic foods with authentic taste. You can taste any item, You will
+                get the authentic teaste. It is possible because of our expereineced Shefs.
             </p>
         </div>
 
         <div class="flexible">
             <div class="item-card" id='first'>
-                <img src="images/food/f1.jpg" alt="food item 1">
-                <h3>Recipie Title</h3>
+                <img src="images/food/kacchi.jpg" alt="food item 1">
+                <h3>Kacchi Biriyani</h3>
                 <p>
-                    Lorem ipsum dolor sit am et, consectetur a dipiscin g elit. L a cus, ferm entum am et faucibus sed
-                    id
-                    nisi lectus at.
+                    In a kacchi biryani, layers of raw marinated meat are alternated with layers with wet, pre-soaked,
+                    raw rice (which may be treated with different spices as above), and cooked together by baking or
+                    medium-to-low direct heat (typically, for at least an hour).
                 </p>
             </div>
             <div class="item-card" id='second'>
-                <img src="images/food/f2.jpg" alt="food item 2">
-                <h3>Recipie Title</h3>
+                <img src="images/food/hyderabadi.jpg" alt="food item 2">
+                <h3>Hyderabadi Biryani</h3>
                 <p>
-                    Lorem ipsum dolor sit am et, consectetur a dipiscin g elit. L a cus, ferm entum am et faucibus sed
-                    id
-                    nisi lectus at.
+                    Hyderabadi biryani, also known as Hyderabadi dum biryani, is a style of biryani from Hyderabad,
+                    India made with basmati rice and goat meat and cooked with the dum pukht method. Originating in the
+                    kitchens of the Nizam of Hyderabad, it combines elements of Hyderabadi and Mughlai cuisines.
                 </p>
             </div>
             <div class="item-card" id='third'>
-                <img src="images/food/f3.png" alt="food item 3">
-                <h3>Recipie Title</h3>
+                <img src="images/food/kala-bhuna.jpg" alt="food item 3">
+                <h3>Kala Bhuna</h3>
                 <p>
-                    Lorem ipsum dolor sit am et, consectetur a dipiscin g elit. L a cus, ferm entum am et faucibus sed
-                    id
-                    nisi lectus at.
+                    Kala Bhuna is a famous meat delicacy from Bangladesh. This dish can be prepared with beef.
+                    The beef is extra cooked. A lot of ingridents is used to make the carry so spicy. If you are from
+                    inidan continent or spice lover then this food is heavenly dish for you.
                 </p>
             </div>
         </div>
