extra potion added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="top-section flexible">
-        <div class="top-child">
+        <div class="top-child content-center">
             <h1> <span class="highlight-text">Skip</span> The Diet, <br> Just Eat Healthy <br> With <span
                     class="highlight-text">Food Park </span> </h1>
             <p>
@@ -34,7 +34,7 @@
         <div class="about-child">
             <img src="images/female/person-image.png" alt="Me">
         </div>
-        <div class="about-child">
+        <div class="about-child content-center">
             <h2>About Us</h2>
             <p>
                 We assure the best food as well as teasty food. When people think about outside food they become afraid.
@@ -48,7 +48,6 @@
     </div>
 
     <div class="recipie-section">
-
         <div class="recipie-text">
             <h2>Our recipies</h2>
             <p>
@@ -58,8 +57,8 @@
         </div>
 
         <div class="flexible">
-            <div class="item-card" id='first'>
-                <img src="images/food/kacchi.jpg" alt="food item 1">
+            <div class="item-card">
+                <img src="images/food/kacchi.jpg" class="card-img" alt="food item 1">
                 <h3>Kacchi Biriyani</h3>
                 <p>
                     In a kacchi biryani, layers of raw marinated meat are alternated with layers with wet, pre-soaked,
@@ -67,8 +66,8 @@
                     medium-to-low direct heat (typically, for at least an hour).
                 </p>
             </div>
-            <div class="item-card" id='second'>
-                <img src="images/food/hyderabadi.jpg" alt="food item 2">
+            <div class="item-card">
+                <img src="images/food/hyderabadi.jpg" class="card-img" alt="food item 2">
                 <h3>Hyderabadi Biryani</h3>
                 <p>
                     Hyderabadi biryani, also known as Hyderabadi dum biryani, is a style of biryani from Hyderabad,
@@ -76,8 +75,8 @@
                     kitchens of the Nizam of Hyderabad, it combines elements of Hyderabadi and Mughlai cuisines.
                 </p>
             </div>
-            <div class="item-card" id='third'>
-                <img src="images/food/kala-bhuna.jpg" alt="food item 3">
+            <div class="item-card">
+                <img src="images/food/kala-bhuna.jpg" class="card-img" alt="food item 3">
                 <h3>Kala Bhuna</h3>
                 <p>
                     Kala Bhuna is a famous meat delicacy from Bangladesh. This dish can be prepared with beef.
@@ -86,6 +85,23 @@
                 </p>
             </div>
         </div>
+    </div>
+
+    <div class="place-section">
+        <h2>Our Places</h2>
+        <div class="flexible">
+            <div class="place-card">
+                <img src="images/places/interior1.jpg" class="card-img" alt="view of interior">
+                <h3>Interior View</h3>
+                <p>Dhaka Branch</p>
+            </div>
+            <div class="place-card">
+                <img src="images/places/interior2.jpg" class="card-img" alt="view of interior">
+                <h3>Roof Top View</h3>
+                <p>Chittagong Branch</p>
+            </div>
+        </div>
+
     </div>
 
     <footer class='bottom-section'>
