--- a/index.html
+++ b/index.html
@@ -9,11 +9,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Food Park</title>
 </head>
 
 <body>
+    <div class="header flexible">
+        <div class="header-child">
+            <h1> FOOD PARK </h1>
+        </div>
+        <div class="header-child">
+            <ul class='flexible'>
+                <li> <a href="#" class=".button-design"> Home </a> </li>
+                <li> <a href="#"> Contact</a></li>
+                <li> <a href="#"> About </a></li>
+            </ul>
+        </div>
+
+    </div>
+
     <div class="top-section flexible">
         <div class="top-child content-center">
             <h1> <span class="highlight-text">Skip</span> The Diet, <br> Just Eat Healthy <br> With <span
@@ -26,7 +42,7 @@
                 Food</a>
         </div>
         <div class="top-child">
-            <img src="images/female/top-img1s.png" alt="a girl with food">
+            <img src="images/female/top-img1.png" alt="a girl with food">
         </div>
     </div>
 
