--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <div class="recipie-section">
         <div class="recipie-text">
-            <h2>Our recipies</h2>
+            <h2>Our Recipies</h2>
             <p>
                 Our recicpies includes all the authentic foods with authentic taste. You can taste any item, You will
                 get the authentic teaste. It is possible because of our expereineced Shefs.
