--- a/index.html
+++ b/index.html
@@ -16,18 +16,14 @@
 </head>
 
 <body>
-    <div class="header flexible">
-        <div class="header-child">
-            <h1> FOOD PARK </h1>
-        </div>
-        <div class="header-child">
-            <ul>
-                <li> <a href="#" class=".button-design"> Home </a> </li>
-                <li> <a href="#"> Contact</a></li>
-                <li> <a href="#"> About </a></li>
-            </ul>
-        </div>
 
+    <div class="header flexible">
+        <h1> FOOD PARK </h1>
+        <ul>
+            <li> <a href="#"> Home </a> </li>
+            <li> <a href="#"> Contact</a></li>
+            <li> <a href="#"> About </a></li>
+        </ul>
     </div>
 
     <div class="top-section flexible">
@@ -64,6 +60,7 @@
     </div>
 
     <div class="recipie-section">
+
         <div class="recipie-text">
             <h2>Our Recipies</h2>
             <p>
@@ -117,7 +114,6 @@
                 <p>Chittagong Branch</p>
             </div>
         </div>
-
     </div>
 
     <footer class='bottom-section'>
